clusters/pk3s/actual-budget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-budget
  namespace: actual-budget
  labels:
    app: actual-budget
spec:
  selector:
    app: actual-budget
  ports:
    - name: http
      port: 5006
      targetPort: 5006
