clusters/pk3s/actual-budget/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: actual-budget
  namespace: actual-budget
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`budget.watchtoken.org`)
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - name: actual-budget
          port: 5006
    - kind: Rule
      match: Host(`budget.local`)
      services:
        - name: actual-budget
          port: 5006
